public/styling/general.css
main {
    padding-top: 100px;;
}

body {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
}

.home_intro_section {
    display: grid;
    align-items: center; 
    grid-template-columns: 1fr 1fr;
    column-gap: 0px;
    margin-left: 180px;
    margin-top: 70px;
    margin-bottom: 200px;
}

.welcomText h1{
    font-size: 60px;
    line-height: 65px;
    margin-bottom: 0;
}

.welcomText p {
    font-size: 20px;
    margin-top: 0;
}

#surveyButton {
    color: white;
    background-color: #3CA89A;
    border-radius: 25px;
    font-size: 15px;
    padding:10px;
    border:none; 
    outline:none;
}

#surveyButton:hover {
    background-color: #FF6F06;
}

/* Create three equal columns that floats next to each other */
.featured_articles_column {
    float: left;
    width: 23%;
    /* padding: 10px; */
    height: 380px; /* Should be removed. Only for demonstration */
    margin-left: 9%;
    border-radius: 25px;
    background-color: white;
    text-decoration: none;
    color: black;
}

.featured_articles_column img {
    width: 320px;
    height:auto;
    border-radius: 10px;
    margin-left:10px;
    margin-top: 10px;
}

.featured_articles_column h2 {
    padding-left: 20px;
    color: black;
}

.featured_articles_column hr {
    width: 90%;
}

/* Clear floats after the columns */
.featured_articles_row:after {
    content: "";
    display: table;
    clear: both;
}

#home_articles_section {
    background-color: #3CA89A;
    padding-top: 30px;
    padding-bottom: 30px;
}

#featured_title {
    margin: auto;
    width: 50%;
    text-align: center;
    color: white;
    padding-bottom: 30px;
}

.articleButton {
    color: white;
    background-color: #FF6F06;
    border-radius: 5px;
    font-size: 30px;
    text-decoration: none;
    margin-left: 250px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 5px;
}

.articleButton:hover {
    background-color: #3CA89A;
}

footer {
    padding-top: 25px;
    padding-bottom: 25px;
    text-align: center;
}

/* Onboarding Stuff */
.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
    z-index: 1;
  }
  
  .survey {
    background: #fff;
    width: 70%;
    max-width: 600px;
    margin: 100px auto;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  }
  
  /* The switch - the box around the slider */
.switch {
    position: relative;
    display: flex;
    justify-content: rightS;
    width: 60px;
    height: 34px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 34px;
  }
  
  .slider:before {
    position: absolute;
    float: right;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
  }
  
  input:checked + .slider {
    background-color: #3CA89A;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #3CA89A;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  #submitSurvey {
    display: block;
    margin: 20px auto;
  }
  
  .close-button {
    float: right;
    top: 10px;
    right: 10px;
    font-size: 20px;
    cursor: pointer;
    background: transparent;
    border: none;
    outline: none;
  }

